--- a/healthcity/index.html
+++ b/healthcity/index.html
@@ -57,7 +57,7 @@
   </section><!-- Fin del inicio -->
 
   <main id="main">
-    <!-- ======= Why Us Section ======= -->
+    <!-- ======= Sección pregunta problema ======= -->
     <section id="why-us" class="why-us">
       <div class="container">
 
@@ -95,12 +95,12 @@
                   </div>
                 </div>
               </div>
-            </div><!-- End .content-->
+            </div>
           </div>
         </div>
 
       </div>
-    </section><!-- End Why Us Section -->
+    </section><!-- Fin sección pregunta problema-->
 
     <!-- ======= Sección problematica ======= -->
     <section id="problematica" class="services">
@@ -208,7 +208,7 @@
                   </p>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-wrap">
@@ -224,7 +224,7 @@
                   </p>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-wrap">
@@ -245,7 +245,7 @@
                   </p>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-wrap">
@@ -266,13 +266,13 @@
                   </p>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section><!-- Fin testimonios -->
 
     <!-- =======  Sección resultados ======= -->
     <section id="resultados" class="gallery">
@@ -322,7 +322,7 @@
   <footer id="footer">
     <div class="container d-md-flex py-4">
     </div>
-    </div>
+    
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
